--- a/app/index.html
+++ b/app/index.html
@@ -2,20 +2,32 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Steam Account Switcher</title>
+    
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script type="text/javascript">
+      // FontAwesome icons
+      const fontawesome = require('@fortawesome/fontawesome');
+      const faArrowDown = require('@fortawesome/fontawesome-free-solid/faArrowDown');
+      const faSpinner = require('@fortawesome/fontawesome-free-solid/faSpinner');
+  
+      fontawesome.library.add(faArrowDown);
+      fontawesome.library.add(faSpinner);
+    </script>
   </head>
   <body>
     <h3>Steam status: <span id="steamStatus"></span></h3>
-    <table border="1">
-      <tr id="tableHeader">
-        <th>SteamID</th>
-        <th>Account Name</th>
-        <th>Profile Name</th>
-        <th>Actions</th>
-      </tr>
-    </table>
+    <div id="accountsGrid" class="container d-none">
+      <div id="accountsHeader" class="row"></div>
+      <div id="accountsBody">
+      </div>
+    </div>
+    <div class="text-center fa-3x" id="loadingAccounts">
+      <i class="fas fa-spinner fa-spin"></i>
+    </div>
   </body>
   <script>
       require("./app");
   </script>
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 </html>
